a bug with the css: when determining the subcontainer's width i took it out of the container, making it loose it's css-class. TODO this is a problem because it requires a non-relative css-class, hich can cause contradictions.

--- a/thumbslides_32.css
+++ b/thumbslides_32.css
@@ -31,7 +31,7 @@ ul.thumbs-list{
 	vertical-align:middle;
 	padding:8px 0;
 }
-	.list-container .subcontainer{
+	.subcontainer{
 		z-index:50;
 		width:252px;
 		float:left;
