--- a/thumbslides_48.css
+++ b/thumbslides_48.css
@@ -30,7 +30,7 @@ ul.thumbs-list{
 	margin:0 auto;
 	vertical-align:middle;
 }
-	.list-container .subcontainer{
+	.subcontainer{
 		z-index:50;
 		width:364px;
 		float:left;
